* Add Kotlin coroutine support. * Add programmatic transaction support. * Remove result callback methods. * Remove slice helper methods. * Improve where builder parenthesis use. Relates to #35